--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "typings": "dist/index.d.ts",
   "bin": "dist/bin.js",
   "scripts": {
-    "test": "mocha --reporter spec",
+    "test": "mocha --reporter min",
     "test-travis": "npm run lint && npm run build && npm run coverage && npm run test",
     "preversion": "npm run build && npm test",
     "coverage": "(`npm bin`/istanbul cover `npm bin`/_mocha || true)",
     "lint": "tslint -t msbuild src/**/*.ts",
     "build": "rm -rf dist && tsc -p tsconfig.json && tsc -p tsconfig.test.json && chmod +x dist/bin.js",
-    "watch": "npm run build && chmod +x dist/bin.js && (tsc -p tsconfig.json --watch & tsc -p tsconfig.test.json --watch)"
+    "watch":
+      "npm run build && chmod +x dist/bin.js && (tsc -p tsconfig.json --watch & tsc -p tsconfig.test.json --watch)"
   },
   "repository": {
     "type": "git",
@@ -31,11 +32,15 @@
     "printWidth": 120
   },
   "dependencies": {
+    "binaryen": "^46.0.0",
+    "colors": "^1.2.1",
     "ebnf": "^1.6.2"
   },
   "devDependencies": {
     "@types/expect": "^1.20.3",
+    "@types/glob": "^5.0.35",
     "expect": "^22.4.3",
+    "glob": "^7.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.1.1",
     "tslint": "^5.9.1",
