feat: execution tests, better validation & bug fixing

--- a/package.json
+++ b/package.json
@@ -31,17 +31,22 @@
     "printWidth": 120
   },
   "dependencies": {
+    "@webassemblyjs/ast": "^1.5.12",
+    "@webassemblyjs/validation": "^1.5.12",
+    "@webassemblyjs/wast-printer": "^1.5.12",
     "colors": "^1.2.1",
     "ebnf": "^1.6.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
     "@types/expect": "^1.20.3",
     "@types/glob": "^5.0.35",
+    "chai": "^4.1.2",
     "expect": "^22.4.3",
     "glob": "^7.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.1.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.1"
   }
 }
