chore: use external dependencies

--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@webassemblyjs/ast": "^1.5.13",
     "@webassemblyjs/validation": "^1.5.13",
     "@webassemblyjs/wast-printer": "^1.5.13",
+    "binaryen": "^48.0.0",
     "colors": "^1.2.1",
-    "ebnf": "^1.6.2"
+    "ebnf": "^1.6.2",
+    "wabt": "^1.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
