--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "dist/index.d.ts",
   "bin": "dist/bin.js",
   "scripts": {
-    "test": "mocha --reporter list",
+    "test": "mocha --require source-map-support/register --reporter list",
     "prof": "node --prof ./node_modules/mocha/bin/_mocha --timeout 999999",
     "test-travis": "npm run lint && npm run build && npm run coverage && npm run test",
     "preversion": "npm run build && npm test",
@@ -39,6 +39,7 @@
     "binaryen": "^51.0.0",
     "colors": "^1.3.1",
     "ebnf": "^1.6.3",
+    "source-map-support": "^0.5.9",
     "wabt": "^1.0.0"
   },
   "devDependencies": {
