--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "typings": "dist/index.d.ts",
   "bin": "dist/bin.js",
   "scripts": {
-    "test": "mocha --require source-map-support/register --reporter list",
+    "test": "node ./node_modules/mocha/bin/_mocha --require source-map-support/register",
+    "test:inspect": "node --inspect ./node_modules/mocha/bin/_mocha --require source-map-support/register",
     "prof": "node --prof ./node_modules/mocha/bin/_mocha --timeout 999999",
     "test-travis": "npm run lint && npm run build && npm run coverage && npm run test",
     "preversion": "npm run build && npm test",
@@ -33,26 +34,26 @@
   },
   "dependencies": {
     "@types/node": "^10.9.2",
-    "@webassemblyjs/ast": "^1.7.6",
-    "@webassemblyjs/validation": "^1.7.6",
-    "@webassemblyjs/wast-printer": "^1.7.6",
+    "@webassemblyjs/ast": "^1.7.9",
+    "@webassemblyjs/validation": "^1.7.9",
+    "@webassemblyjs/wast-printer": "^1.7.9",
     "binaryen": "^51.0.0",
-    "colors": "^1.3.1",
+    "colors": "^1.3.2",
     "ebnf": "^1.6.3",
     "source-map-support": "^0.5.9",
-    "wabt": "^1.0.0"
+    "wabt": "^1.0.6"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/expect": "^1.20.3",
     "@types/glob": "^5.0.35",
-    "chai": "^4.1.2",
-    "expect": "^23.5.0",
-    "glob": "^7.1.2",
+    "chai": "^4.2.0",
+    "expect": "^23.6.0",
+    "glob": "^7.1.3",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-performance": "^0.1.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.1.3"
   }
 }
