--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "colors": "^1.3.3",
     "ebnf": "^1.6.3",
     "source-map-support": "^0.5.10",
+    "utf8-bytes": "0.0.1",
     "wabt": "^1.0.8"
   },
   "devDependencies": {
