--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.lys linguist-language=DataWeave
+*.dot linguist-generated=true
+*.wast linguist-generated=true
+*.ast linguist-generated=true
+*.lys.desugar linguist-language=DataWeave linguist-generated=true
