--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aureum",
+  "name": "lys-compiler",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -36,6 +36,7 @@
     "@types/node": "^10.9.2",
     "@webassemblyjs/ast": "^1.8.5",
     "@webassemblyjs/wast-printer": "^1.8.5",
+    "arg": "^4.1.0",
     "colors": "^1.3.3",
     "ebnf": "^1.6.3",
     "source-map-support": "^0.5.10",
