--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
-  "name": "aureum",
-  "version": "1.0.0",
+  "name": "lys-compiler",
+  "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "bin": "dist/bin.js",
-  "scripts": {
-    "test": "node ./node_modules/mocha/bin/_mocha --require source-map-support/register",
-    "test:inspect": "node --inspect ./node_modules/mocha/bin/_mocha --require source-map-support/register",
-    "prof": "node --prof ./node_modules/mocha/bin/_mocha --timeout 999999",
-    "test-travis": "npm run lint && npm run build && npm run coverage && npm run test",
-    "preversion": "npm run build && npm test",
-    "coverage": "(`npm bin`/istanbul cover `npm bin`/_mocha || true)",
-    "lint": "tslint -t msbuild src/**/*.ts",
-    "build": "rm -rf dist && tsc -p tsconfig.json && tsc -p tsconfig.test.json && chmod +x dist/bin.js",
-    "watch": "npm run build && chmod +x dist/bin.js && (tsc -p tsconfig.json --watch & tsc -p tsconfig.test.json --watch)"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/menduz/aureum.git"
@@ -33,20 +23,21 @@
     "printWidth": 120
   },
   "dependencies": {
-    "@types/node": "^10.9.2",
     "@webassemblyjs/ast": "^1.8.5",
     "@webassemblyjs/wast-printer": "^1.8.5",
+    "arg": "^4.1.0",
+    "binaryen": "^73.0.0",
     "colors": "^1.3.3",
     "ebnf": "^1.6.3",
-    "source-map-support": "^0.5.10",
     "utf8-bytes": "0.0.1",
     "wabt": "^1.0.10"
   },
   "devDependencies": {
+    "source-map-support": "^0.5.10",
+    "@types/node": "^10.9.2",
     "@types/chai": "^4.1.4",
     "@types/expect": "^1.20.3",
     "@types/glob": "^5.0.35",
-    "binaryen": "^73.0.0",
     "chai": "^4.2.0",
     "expect": "^24.0.0",
     "glob": "^7.1.3",
