wip: add libs to the testing command

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "lys-compiler",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "bin": "dist/bin.js",
+  "bin": {
+    "lys": "dist/bin.js",
+    "lys-compiler": "dist/bin.js"
+  },
   "scripts": {},
   "repository": {
     "type": "git",
