--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
     "noUnusedLocals": true,
     "strict": true,
     "strictNullChecks": true,
+    "strictFunctionTypes": true,
     "resolveJsonModule": true,
-    "lib": ["es2018"]
+    "lib": ["es2018"],
+    "plugins": [{ "name": "tslint-language-service" }]
   },
   "exclude": ["node_modules", "test", "dist"],
   "include": ["src/**/*"]
