--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/glob": "^7.1.1",
     "@types/node": "^10.9.2",
     "chai": "^4.2.0",
+    "dcl-tslint-config-standard": "^1.1.0",
     "expect": "^24.5.0",
     "glob": "^7.1.3",
     "istanbul": "^0.4.5",
@@ -48,6 +49,7 @@
     "mocha-performance": "^0.1.1",
     "source-map-support": "^0.5.11",
     "tslint": "^5.14.0",
+    "tslint-language-service": "^0.9.9",
     "typescript": "^3.3.4000"
   }
 }
