--- a/.gitignore
+++ b/.gitignore
@@ -56,4 +56,5 @@ src/**/*.d.js
 **/_lys_test_results.json
 **/*.wasm
 test/fixtures/cli/*/build
-test/fixtures/execution/modules/build
+examples/build
+build
