chore: set up azure pipelines

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "lib": ["es2018"],
     "plugins": [{ "name": "tslint-language-service" }]
   },
-  "exclude": ["node_modules", "test", "dist"],
+  "exclude": ["node_modules", "test/**/*", "dist"],
   "include": ["src/**/*"]
 }
