--- a/package.json
+++ b/package.json
@@ -46,10 +46,27 @@
     "glob": "^7.1.3",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.22.0",
     "mocha-performance": "^0.1.1",
+    "nyc": "^14.1.0",
     "source-map-support": "^0.5.12",
+    "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-language-service": "^0.9.9",
     "typescript": "^3.4.5"
+  },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "test/**/*"
+    ],
+    "reporter": [
+      "cobertura",
+      "text"
+    ],
+    "all": true
   }
 }
