chore: build artifacts in azure, publish to NPM

--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "lys-compiler",
-  "version": "0.1.8",
+  "name": "lys",
+  "version": "0.1.9",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "bin": {
-    "lys": "dist/bin.js",
-    "lys-compiler": "dist/bin.js"
+    "lys": "dist/bin.js"
   },
   "scripts": {
     "prepublish": "make build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/menduz/aureum.git"
+    "url": "git+https://github.com/lys-lang/lys.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/menduz/aureum/issues"
+    "url": "https://github.com/lys-lang/lys/issues"
   },
-  "homepage": "https://github.com/menduz/aureum#readme",
+  "homepage": "https://github.com/lys-lang/lys#readme",
   "prettier": {
     "semi": true,
     "singleQuote": true,
@@ -68,5 +67,10 @@
       "text"
     ],
     "all": true
-  }
+  },
+  "files": [
+    "LICENSE",
+    "dist",
+    "stdlib"
+  ]
 }
