--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lys",
-  "version": "0.1.9",
+  "version": "0.1.10-beta.0",
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -8,7 +8,8 @@
     "lys": "dist/bin.js"
   },
   "scripts": {
-    "prepublish": "make build"
+    "prepublish": "make build",
+    "release": "ts-node scripts/release.ts"
   },
   "repository": {
     "type": "git",
@@ -37,19 +38,25 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/git-rev-sync": "^1.12.0",
     "@types/glob": "^7.1.1",
     "@types/node": "^10.9.2",
+    "@types/node-fetch": "^2.3.4",
+    "@types/semver": "^6.0.0",
     "chai": "^4.2.0",
     "dcl-tslint-config-standard": "^1.1.0",
     "expect": "^24.7.1",
+    "git-rev-sync": "^1.12.0",
     "glob": "^7.1.3",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.22.0",
     "mocha-performance": "^0.1.1",
+    "node-fetch": "^2.6.0",
     "nyc": "^14.1.0",
+    "semver": "^6.1.1",
     "source-map-support": "^0.5.12",
-    "ts-node": "^8.1.0",
+    "ts-node": "^8.2.0",
     "tslint": "^5.16.0",
     "tslint-language-service": "^0.9.9",
     "typescript": "^3.4.5"
