chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -30,36 +30,36 @@
   "dependencies": {
     "@webassemblyjs/ast": "^1.8.5",
     "@webassemblyjs/wast-printer": "^1.8.5",
-    "arg": "^4.1.0",
-    "binaryen": "^84.0.0-nightly.20190530",
-    "ebnf": "^1.6.3",
+    "arg": "^4.1.2",
+    "binaryen": "^89.0.0",
+    "ebnf": "^1.7.0",
     "utf8-bytes": "0.0.1",
-    "wabt": "^1.0.11"
+    "wabt": "^1.0.12"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
+    "@types/chai": "^4.2.6",
     "@types/git-rev-sync": "^1.12.0",
     "@types/glob": "^7.1.1",
-    "@types/node": "^10.14.8",
-    "@types/node-fetch": "^2.3.5",
-    "@types/semver": "^6.0.0",
+    "@types/node": "^12.12.16",
+    "@types/node-fetch": "^2.5.4",
+    "@types/semver": "^6.2.0",
     "chai": "^4.2.0",
     "dcl-tslint-config-standard": "^1.1.0",
-    "expect": "^24.8.0",
+    "expect": "^24.9.0",
     "git-rev-sync": "^1.12.0",
-    "glob": "^7.1.4",
+    "glob": "^7.1.6",
     "istanbul": "^0.4.5",
-    "mocha": "^6.1.4",
-    "mocha-junit-reporter": "^1.23.0",
+    "mocha": "^6.2.2",
+    "mocha-junit-reporter": "^1.23.1",
     "mocha-performance": "^0.1.1",
     "node-fetch": "^2.6.0",
     "nyc": "^14.1.1",
-    "semver": "^6.1.1",
-    "source-map-support": "^0.5.12",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
+    "semver": "^6.3.0",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
     "tslint-language-service": "^0.9.9",
-    "typescript": "^3.5.1"
+    "typescript": "^3.7.3"
   },
   "nyc": {
     "extension": [
