chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@webassemblyjs/ast": "^1.8.5",
     "@webassemblyjs/wast-printer": "^1.8.5",
     "arg": "^4.1.2",
-    "binaryen": "^89.0.0",
-    "ebnf": "^1.7.0",
+    "binaryen": "^89.0.0-nightly.20191219",
+    "ebnf": "^1.8.0",
     "utf8-bytes": "0.0.1",
     "wabt": "^1.0.12"
   },
