--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "printWidth": 120
   },
   "dependencies": {
-    "@webassemblyjs/ast": "^1.8.5",
-    "@webassemblyjs/wast-printer": "^1.8.5",
+    "@webassemblyjs/ast": "^1.9.0",
+    "@webassemblyjs/wast-printer": "^1.9.0",
     "arg": "^4.1.2",
-    "binaryen": "^89.0.0-nightly.20191219",
+    "binaryen": "^89.0.0",
     "ebnf": "^1.8.0",
     "utf8-bytes": "0.0.1",
-    "wabt": "^1.0.12"
+    "wabt": "^1.0.13"
   },
   "devDependencies": {
     "@types/chai": "^4.2.6",
@@ -56,10 +56,10 @@
     "nyc": "^14.1.1",
     "semver": "^6.3.0",
     "source-map-support": "^0.5.16",
-    "ts-node": "^8.5.4",
+    "ts-node": "^8.7.0",
     "tslint": "^5.20.1",
     "tslint-language-service": "^0.9.9",
-    "typescript": "^3.7.3"
+    "typescript": "^3.8.3"
   },
   "nyc": {
     "extension": [
