--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "inlineSources": false,
     "sourceMap": true,
     "declaration": true,
+    "allowJs": true,
     "outDir": "dist",
     "moduleResolution": "node",
     "stripInternal": true,
@@ -27,6 +28,6 @@
     "resolveJsonModule": true,
     "lib": ["es2020"]
   },
-  "exclude": ["node_modules", "test/**/*", "dist"],
+  "exclude": ["test/**/*", "dist"],
   "include": ["src/**/*"]
 }
