--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,6 @@
 {
   "require": "ts-node/register",
+  "loader": "ts-node/esm",
   "extensions": ["ts", "tsx"],
   "spec": [
     "test/**/*.spec.*"
