--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,3 +19,10 @@ jobs:
         run: make e2e
       - name: make lint
         run: make lint
+      - name: Publish
+        uses: menduz/oddish-action@master
+        with:
+          registry-url: "https://registry.npmjs.org"
+          access: public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
