--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lys": "dist/bin.js"
   },
   "scripts": {
-    "prepublish": "make build",
-    "release": "ts-node scripts/release.ts"
+    "prepublish": "make build"
   },
   "repository": {
     "type": "git",
@@ -28,24 +27,24 @@
     "printWidth": 120
   },
   "dependencies": {
-    "@types/mocha": "^10.0.0",
     "@webassemblyjs/ast": "^1.11.1",
     "@webassemblyjs/wast-printer": "^1.11.1",
     "arg": "^4.1.3",
     "binaryen": "^100.0.0",
     "ebnf": "^1.7.4",
-    "expect": "^29.2.2",
-    "mocha": "^10.1.0",
-    "moment": "^2.29.4",
     "utf8-bytes": "0.0.1",
     "wabt": "^1.0.30"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.0",
     "@types/git-rev-sync": "^1.12.0",
     "@types/glob": "^7.1.3",
     "@types/node": "^12.12.53",
     "@types/node-fetch": "^2.5.7",
     "@types/semver": "^6.2.1",
+    "expect": "^29.2.2",
+    "mocha": "^10.1.0",
+    "moment": "^2.29.4",
     "git-rev-sync": "^3.0.2",
     "glob": "^7.1.6",
     "istanbul": "^0.4.5",
