--- a/package.json
+++ b/package.json
@@ -36,19 +36,19 @@
     "wabt": "^1.0.30"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.0",
     "@types/git-rev-sync": "^1.12.0",
     "@types/glob": "^7.1.3",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^12.12.53",
     "@types/node-fetch": "^2.5.7",
     "@types/semver": "^6.2.1",
     "expect": "^29.2.2",
-    "mocha": "^10.1.0",
-    "moment": "^2.29.4",
     "git-rev-sync": "^3.0.2",
     "glob": "^7.1.6",
-    "istanbul": "^0.4.5",
+    "mocha": "^10.1.0",
+    "moment": "^2.29.4",
     "node-fetch": "^2.6.0",
+    "nyc": "^15.1.0",
     "semver": "^6.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
