--- a/package.json
+++ b/package.json
@@ -27,19 +27,18 @@
     "printWidth": 120
   },
   "dependencies": {
-    "@webassemblyjs/ast": "^1.11.1",
-    "@webassemblyjs/wast-printer": "^1.11.1",
+    "@webassemblyjs/ast": "1.11.1",
+    "@webassemblyjs/wast-printer": "1.11.1",
     "arg": "^4.1.3",
     "binaryen": "^100.0.0",
     "ebnf": "^1.7.4",
-    "utf8-bytes": "0.0.1",
     "wabt": "^1.0.30"
   },
   "devDependencies": {
     "@types/git-rev-sync": "^1.12.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^10.0.0",
-    "@types/node": "^12.12.53",
+    "@types/node": "^16.18.2",
     "@types/node-fetch": "^2.5.7",
     "@types/semver": "^6.2.1",
     "expect": "^29.2.2",
