chore: add id-token to enable signed releases

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -54,6 +54,9 @@ jobs:
         run: make e2e
 
   build-publish:
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ubuntu-latest
     needs: ['markdown-test', 'lint', 'test']
     steps:
