--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "bin": {
     "lys": "dist/bin.js"
   },
@@ -27,18 +28,18 @@
     "printWidth": 120
   },
   "dependencies": {
-    "@webassemblyjs/ast": "1.11.1",
-    "@webassemblyjs/wast-printer": "1.11.1",
+    "@webassemblyjs/ast": "^1.14.1",
+    "@webassemblyjs/wast-printer": "^1.14.1",
     "arg": "^4.1.3",
-    "binaryen": "^100.0.0",
+    "binaryen": "^121.0.0",
     "ebnf": "^1.9.0",
-    "wabt": "^1.0.30"
+    "wabt": "^1.0.36"
   },
   "devDependencies": {
     "@types/git-rev-sync": "^1.12.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^10.0.0",
-    "@types/node": "^16.18.2",
+    "@types/node": "^22.10.9",
     "@types/node-fetch": "^2.5.7",
     "@types/semver": "^6.2.1",
     "expect": "^29.2.2",
@@ -49,8 +50,8 @@
     "node-fetch": "^2.6.0",
     "nyc": "^15.1.0",
     "semver": "^6.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   },
   "files": [
     "LICENSE",
