--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": { "*": ["types/*"] },
-    "module": "commonjs",
-    "target": "es2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "es2022",
     "diagnostics": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -13,7 +14,6 @@
     "declaration": true,
     "allowJs": true,
     "outDir": "dist",
-    "moduleResolution": "node",
     "stripInternal": true,
     "pretty": true,
     "forceConsistentCasingInFileNames": true,
