--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,6 +27,18 @@ jobs:
         run: npm install
       - name: make test
         run: make test
+
+  lys-compiler:
+    name: lys-compiler build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 22.x
+      - name: make test
+        run: make build
       - name: Checkout lys-compiler
         uses: actions/checkout@v4
         with:
@@ -35,8 +47,7 @@ jobs:
       - name: Build and test lys-compiler
         working-directory: ./lys-compiler
         run: |
-          make build LYS=../lys/dist/bin.js
-
+          make build LYS=../dist/bin.js
   lint:
     runs-on: ubuntu-latest
     steps:
