build lys-compiler on CI

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,7 +39,7 @@ jobs:
           node-version: 22.x
       - name: npm install
         run: npm install
-      - name: make test
+      - name: make build
         run: make build
       - name: Checkout lys-compiler
         uses: actions/checkout@v4
